# Celeritas

./: .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
python_script/: run.py
python_script/instance/: run_obgn_arxiv.py  run_ogbn_paper100M.py
python_script/instance/configs_yaml/ogbn_paper100M/: ogbn_paper100M.yaml
python_script/utils/: executor.py  parse_result.py  report_result.py  trace_usage.py
system_design/Nvidia/modules/scatter/: index_info.cuh
system_design/cpp/cpp/: activation_function.cpp  batch.cpp  buffer.cpp  celeritas.cpp  comparator.cpp  complex.cpp  config.cpp  dataloader.cpp  decoder.cpp  distmul.cpp  evaluator.cpp  gnn.cpp  graph.cpp  graph_storage.cpp  graphsage_layer.cpp  initialization.cpp  io_manager.cpp  layer_utils.cpp  loss_function.cpp  model.cpp  options.cpp  ordering.cpp  pipeline.cpp  regularization.cpp  relation_operators.cpp  reporter.cpp  sampler.cpp  storage.cpp  train.cpp  transe.cpp  utils.cpp
system_design/cpp/header/: activation_function.h  base_gnn_layer.h  batch.h  buffer.h  celeritas.h  comparators.h  complex.h  config.h  constants.h  dataloader.h  datatypes.h  decoder.h  distmult.h  evaluator.h  featurizer.h  gnn.h  graph.h  graph_storage.h  graphsage_layer.h  initizlization.h  io_manager.h  layer_utils.h  logger.h  loss_function.h  model.h  model_utils.h  options.h  ordering.h  pipeline.h  regularization.h  relation_operators.h  reporter.h  sampler.h  storage.h  train.h  transe.h  utils.h
system_design/cpp/pybind/: activation_function_wrap.cpp  base_gnn_layer_wrap.cpp  celeritas_wrap.cpp  comparators_wrap.cpp  complex_wrap.cpp  config_wrap.cpp  dataloader_wrap.cpp  decoder_wrap.cpp  dismult_wrap.cpp  gnn_wrap.cpp  graph_wrap.cpp  graphsage_layer_wrap.cpp  initizlization_wrap.cpp  io_manager_wrap.cpp  layer_utils_wrap.cpp  loss_function_wrap.cpp  model_wrap.cpp  options_wrap.cpp  regularization_wrap.cpp  relation_operators_wrap.cpp  reporter_wrap.cpp  sampler_wrap.cpp  train_wrap.cpp  transe_wrap.cpp  wrap.cpp
system_design/python/: __init__.py
system_design/python/cmd/: celeritas_eval.py  celeritas_train.py
system_design/python/utils/configs/: celeritas_model_configs.py  enum_para.py
system_design/python/utils/preprocessing/: dataset_base_class.py
system_design/python/utils/preprocessing/converter/: to_tensor.py
system_design/python/utils/preprocessing/dataset/: ogbn_arxiv.py  ogbn_papers100M.py
(+3 files in other folders)
