[metadata]
name = celeritas
version = 1.0.0

[options]
install_requires =
    sphinx_rtd_theme
    breathe
    numpy
    pandas
    tox
    pytest
    torch
    hydra-core
    pyspark

zip_safe = false
python_requires = >=3.6
include_package_data = true

packages =
    celeritas
    celeritas.utils
    celeritas.cmd

package_dir =
    celeritas = system_design/python
    celeritas.utils = system_design/python/utils
    celeritas.cmd = system_design/python/cmd

[options.entry_points]
console_scripts =
    celeritas_train = celeritas.cmd.celeritas_train:main
    celeritas_eval = celeritas.cmd.celeritas_eval:main



